# futuroptimist

./: .gitignore  .lycheeignore  .pre-commit-config.yaml  .wordlist.txt  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DESIGN_3D_HEATMAP.md  INSTRUCTIONS.md  LICENSE  Makefile  README.md  RUNBOOK.md  image_descriptions.md  llms.txt  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  setup.ps1  source_urls.txt  spellcheck.yaml  verify_report.json  video_ids.txt
assets/: annual_contribs.csv
data/: README.md
dict/: prompt-doc-repos.txt
docs/: CHANGELOG.md  README.md  flywheel-construction.md  fuzzing-wins.md  prompt-docs-summary.md  prompt-docs-todos.md  prompt-saturation-rubric.md  prompts-codex-spellcheck.md  prompts-codex-video-script-ideas.md  prompts-codex-video-script.md  prompts-codex.md  repo-feature-summary.md  repo_list.txt  repository-guide.md  video-editing-playbook.md
flywheel/: __init__.py  fit.py
ideas/: README.md  dspace_integration.md  future_essays_retrospective.md  indoor_aquarium_viewer_requests.md  indoor_aquariums.md  solar_aquaponics.md  solarpunk_video_project_brainstorm.md
outages/: 2025-08-22-codecov-token-missing.json  2025-08-22-heatmap-ci-failure.md  2025-08-22-heatmap-token.md  2025-08-22-missing-gh-token.json  2025-08-22-missing-uv-setup.json  2025-08-23-outage-schema-missing-workflow.md  2025-08-23-python-setup-order.json  2025-08-24-svg3d-nonfinite-factor.json  2025-08-24-tests-workflow-yaml.json  2025-08-25-index-local-media-symlink.json  2025-08-25-srt-utf8.json  2025-08-25-wordlist-unsorted.json  2025-08-27-reversed-srt-times.json  2025-08-27-slugify-unicode.json  2025-08-27-status-emoji-type.json  2025-08-27-status-emoji-type.md  2025-08-27-wordlist-regression.json  2025-08-27-wordlist-unsorted.json  2025-08-27-wordlist-unsorted.md  2025-09-01-rawpy-py312-wheel.json  2025-09-02-docs-linkchecker-permission.json  2025-09-02-docs-python-order.json  2025-09-02-docs-python-order.md  2025-09-02-py312-rawpy.json  2025-09-02-rawpy-pin.json  2025-09-03-srt-hour-overflow.json  2025-09-03-srt-hour-overflow.md  2025-09-24-tests-secrets-if.json  2025-09-24-tests-secrets-if.md  2025-09-26-related-projects-flywheel.json  2025-09-26-related-projects-flywheel.md  2025-10-31-update-repo-status-request-errors.json  2025-10-31-update-repo-status-request-errors.md  2025-11-04-update-repo-status-python.json  2025-11-04-update-repo-status-python.md  schema.json
schemas/: assets_manifest.schema.json  selection_manifest.schema.json  video_metadata.schema.json
scripts/: checks.sh  collect_sources.py  fetch_subtitles.py  generate_annual_contributions.py  generate_heatmap.py  gh_graphql.py  index_local_media.py  migrate-prompt-docs.sh  precommit_heatmap.py  precommit_scan_secrets.py  scaffold_videos.py  scan-secrets.py  svg3d.py  update_prompt_docs_summary.py  update_transcript_links.py  validate_outages.py
src/: analytics_dashboard.py  analytics_ingester.py  annotate_publish.py  collect_sources.py  convert_assets.py  convert_missing.py  create_fact_check_discussion.py  create_otio_timeline.py  describe_images.py  enrich_metadata.py  fact_check_discussions.py  fetch_subtitles.py  generate_annual_contribs.py  generate_annual_contributions.py  generate_assets_manifest.py  generate_contrib_heatmap.py  generate_heatmap.py  generate_pr_heatmap.py  generate_scripts_from_subtitles.py  gh_graphql.py  gh_rest.py  github_auth.py  http_utils.py  index_assets.py  index_local_media.py  index_script_embeddings.py  index_script_hooks.py  index_script_segments.py  newsletter_builder.py  prepare_youtube_upload.py  rename_video_slug.py  render_video.py  repo_status.py  report_funnel.py  scaffold_videos.py  srt_to_markdown.py  svg3d.py  thumbnail_text_predictor.py  update_transcript_links.py  update_video_metadata.py  (+2 more)
tests/: conftest.py  test_analytics_dashboard.py  test_analytics_ingester.py  test_annotate_publish.py  test_cache.py  test_changelog_dates.py  test_checks_script.py  test_chunking.py  test_cli_interface.py  test_e2e.py  (+65 more)
(+104 files in other folders)
