[project]
name = "futuroptimist-youtube-mcp"
version = "0.1.0"
description = "YouTube transcript MCP tool"
readme = "README.md"
authors = [{name = "Futuroptimist"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "httpx>=0.26.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.1",
    "tenacity>=8.2.3",
    "typing-extensions>=4.9.0",
    "uvicorn>=0.23.2",
    "youtube-transcript-api>=0.6.2",
]

[project.optional-dependencies]
dev = [
    "coverage[toml]>=7.4.0",
    "mypy>=1.8.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tools.youtube_mcp*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "BLE", "C4", "DTZ", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["tools.youtube_mcp"]
plugins = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"

[tool.coverage.run]
source = ["tools/youtube_mcp"]
branch = true

[tool.coverage.report]
show_missing = true
