[project]
name = "futuroptimist-youtube-mcp"
version = "0.1.0"
description = "Utilities for fetching and chunking YouTube transcripts"
requires-python = ">=3.11"
authors = [{name = "Futuroptimist"}]
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.7.0",
    "tenacity>=8.2.3",
    "typing-extensions>=4.11.0",
    "uvicorn>=0.29.0",
    "youtube-transcript-api>=0.6.2",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=6.0.0",
    "ruff>=0.4.4",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "W", "N", "RUF"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true
packages = ["tools.youtube_mcp"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=tools.youtube_mcp --cov=tests --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["tools/youtube_mcp"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
