[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "futuroptimist-youtube-mcp"
version = "0.1.0"
description = "YouTube transcript MCP service and tooling"
requires-python = ">=3.11"
authors = [{ name = "Futuroptimist" }]
dependencies = [
    "youtube-transcript-api>=0.6,<1.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "tenacity>=8.2",
    "typing-extensions>=4.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3",
    "mypy>=1.9",
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "coverage>=7.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "assets",
    "data",
    "docs",
    "ideas",
    "image_descriptions.md",
    "outages",
    "premiere",
    "schemas",
    "scripts",
    "src",
    "video_scripts",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "A",
    "RUF",
]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["tools/youtube_mcp"]

[tool.coverage.report]
show_missing = true

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"tools.youtube_mcp" = ["schemas/*.json"]
